<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/pickPlayersFragment">
    <fragment
        android:id="@+id/pickPlayersFragment"
        android:name="dev.gressier.pennydrop.fragments.PickPlayersFragment"
        android:label="@string/pick_players" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="dev.gressier.pennydrop.fragments.GameFragment"
        android:label="@string/penny_drop" />
    <fragment
        android:id="@+id/rankingsFragment"
        android:name="dev.gressier.pennydrop.fragments.RankingsFragment"
        android:label="@string/rankings" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="dev.gressier.pennydrop.fragments.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="dev.gressier.pennydrop.fragments.AboutFragment"
        android:label="@string/about_penny_drop" />
</navigation>